--- a/index.html
+++ b/index.html
@@ -360,8 +360,23 @@
                 align-items: center;
             }
 
-            .studies-grid {
+            .table-header,
+            .table-row {
                 grid-template-columns: 1fr;
+                text-align: center;
+                gap: 10px;
+            }
+
+            .table-header {
+                display: none;
+            }
+
+            .table-row {
+                padding: 20px;
+                border-radius: 10px;
+                margin-bottom: 15px;
+                background: white;
+                box-shadow: 0 5px 15px rgba(0,0,0,0.1);
             }
 
             .nav-menu {
@@ -763,32 +778,37 @@
         ];
 
         // DOM elements
-        const studiesGrid = document.getElementById('studiesGrid');
+        const studiesTable = document.getElementById('studiesTable');
         const filterButtons = document.querySelectorAll('.filter-btn');
-        const ratingButtons = document.querySelectorAll('.rating-btn');
 
         // Current filters
         let currentCategory = 'all';
-        let currentRating = 'all';
 
         // Render studies
         function renderStudies() {
             const filteredStudies = studies.filter(study => {
-                const categoryMatch = currentCategory === 'all' || study.category === currentCategory;
-                const ratingMatch = currentRating === 'all' || study.rating.toString() === currentRating;
-                return categoryMatch && ratingMatch;
+                return currentCategory === 'all' || study.category === currentCategory;
             });
 
-            studiesGrid.innerHTML = filteredStudies.map(study => `
-                <div class="study-card">
-                    <div class="study-header">
-                        <div class="study-location">${study.location}</div>
-                        <div class="study-rating">${study.rating}/10</div>
+            const tableRows = filteredStudies.map(study => `
+                <div class="table-row">
+                    <div>
+                        <div class="study-description-table">${study.description}</div>
+                        <div class="study-location-table">${study.location}</div>
                     </div>
-                    <div class="study-description">${study.description}</div>
-                    <a href="${study.link}" target="_blank" class="study-link">View Research Study</a>
+                    <div class="study-rating-table">${study.rating}/10</div>
+                    <a href="${study.link}" target="_blank" class="study-link-table">View Study</a>
                 </div>
             `).join('');
+
+            studiesTable.innerHTML = `
+                <div class="table-header">
+                    <div>Research Study Description</div>
+                    <div>Quality Rating</div>
+                    <div>View Study</div>
+                </div>
+                ${tableRows}
+            `;
         }
 
         // Filter by category
@@ -797,16 +817,6 @@
                 filterButtons.forEach(btn => btn.classList.remove('active'));
                 button.classList.add('active');
                 currentCategory = button.dataset.filter;
-                renderStudies();
-            });
-        });
-
-        // Filter by rating
-        ratingButtons.forEach(button => {
-            button.addEventListener('click', () => {
-                ratingButtons.forEach(btn => btn.classList.remove('active'));
-                button.classList.add('active');
-                currentRating = button.dataset.rating;
                 renderStudies();
             });
         });
@@ -825,7 +835,12 @@
             });
         });
 
-        // Initial render
+        // Initial render - make sure it runs when page loads
+        document.addEventListener('DOMContentLoaded', function() {
+            renderStudies();
+        });
+        
+        // Also render immediately in case DOMContentLoaded already fired
         renderStudies();
     </script>
 </body>
