--- a/index.html
+++ b/index.html
@@ -232,23 +232,25 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
             color: white;
             display: grid;
-            grid-template-columns: 80px 2fr 120px;
-            padding: 25px 35px;
+            grid-template-columns: 80px 2fr 140px;
+            padding: 25px 40px;
             font-weight: bold;
             font-size: 1.2rem;
             text-align: center;
             box-shadow: 0 4px 20px rgba(102, 126, 234, 0.3);
+            gap: 30px;
         }
 
         .table-row {
             display: grid;
-            grid-template-columns: 80px 2fr 120px;
-            padding: 30px 35px;
+            grid-template-columns: 80px 2fr 140px;
+            padding: 30px 40px;
             border-bottom: 1px solid #f0f0f0;
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             align-items: center;
             position: relative;
             overflow: hidden;
+            gap: 30px;
         }
 
         .table-row::before {
@@ -330,9 +332,59 @@
         .study-link-table {
             background: linear-gradient(135deg, #667eea, #764ba2, #4ecdc4);
             color: white;
-            padding: 14px 25px;
+            padding: 16px 28px;
             text-decoration: none;
-            border-radius: 30px;
+            border-radius: 35px;
+            font-weight: 800;
+            transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            text-align: center;
+            box-shadow: 0 12px 35px rgba(102, 126, 234, 0.4);
+            position: relative;
+            overflow: hidden;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+            font-size: 0.85rem;
+            border: 2px solid transparent;
+            background-clip: padding-box;
+        }
+
+        .study-link-table::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.4), transparent);
+            transition: left 0.6s;
+        }
+
+        .study-link-table::after {
+            content: '⚡';
+            position: absolute;
+            right: 8px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 1.2rem;
+            opacity: 0;
+            transition: all 0.3s;
+        }
+
+        .study-link-table:hover::before {
+            left: 100%;
+        }
+
+        .study-link-table:hover::after {
+            opacity: 1;
+            right: 12px;
+        }
+
+        .study-link-table:hover {
+            transform: translateY(-6px) scale(1.12) rotateY(5deg);
+            box-shadow: 0 20px 50px rgba(102, 126, 234, 0.7);
+            background: linear-gradient(135deg, #ff6b6b, #4ecdc4, #45b7d1);
+            border-color: rgba(255,255,255,0.3);
+        }: 30px;
             font-weight: 700;
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             text-align: center;
@@ -490,7 +542,7 @@
             .table-row {
                 grid-template-columns: 1fr;
                 text-align: center;
-                gap: 10px;
+                gap: 15px;
             }
 
             .table-header {
@@ -498,11 +550,11 @@
             }
 
             .table-row {
-                padding: 20px;
-                border-radius: 10px;
-                margin-bottom: 15px;
+                padding: 25px;
+                border-radius: 15px;
+                margin-bottom: 20px;
                 background: white;
-                box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+                box-shadow: 0 10px 30px rgba(0,0,0,0.15);
             }
 
             .nav-menu {
