--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,9 @@
         
         // Also render immediately in case DOMContentLoaded already fired
         renderStudies();
+    </script>
+</body>
+</html>
             {
                 link: "https://journals.sagepub.com/doi/10.1177/02692155221074052",
                 description: "Clinical Rehabilitation journal study on PEMF therapy effectiveness.",
