--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <a href="#home" class="nav-item">Home</a>
                     <a href="#research" class="nav-item">Research</a>
                     <a href="#ratings" class="nav-item">Ratings</a>
-                    <a href="#contact" class="nav-item">Contact</a>
+                    <a href="mailto:jackaa22@gmail.com" class="nav-item">Contact</a>
                 </nav>
             </div>
         </div>
