--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             position: relative;
             z-index: 2;
             display: flex;
+            flex-direction: row;
             align-items: center;
             gap: 50px;
         }
@@ -122,16 +123,6 @@
             border-radius: 15px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
         }
-
-        .hero-content {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .hero-image {
-                max-width: 350px;
-                margin-top: 30px;
-            }
         
         .hero h1 {
             font-size: 3.5rem;
@@ -483,6 +474,15 @@
         }
 
         @media (max-width: 768px) {
+            .hero-content {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .hero-image {
+                max-width: 350px;
+                margin-top: 30px;
+            }
             .hero h1 {
                 font-size: 2.5rem;
             }
