--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <meta property="og:title" content="PEMF Therapy - Evidence-Based Medical Research">
     <meta property="og:description" content="Comprehensive database of high-quality medical research from Mayo Clinic, Johns Hopkins, and leading institutions worldwide.">
-    <meta property="og:image" content="https://royazaria.github.io/important-research-about-the-pemf/og-image.jpg">
+    <meta property="og:image" content="https://royazaria.github.io/important-research-about-the-pemf/logo.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://royazaria.github.io/important-research-about-the-pemf/">
     <style>
         * {
